sumo/tests/od2trips/errors/false_options/missing_input/options.od2trips
-n input_net.net.xml -o trips.trips.xml
